  - default page gesture changed right/left sense according to other xc ui interaction pattern
  - pressing the Escape key in task manager switches to "Close" tab (#2877)
  - separate font for dialogs (#723, #2806)
* map
  - terrain countour lines (#2451)
  - continue loading terrain/topography without GPS fix (#2723)
  - suppress drawing duplicate topography labels
* infoboxes
  - new content "Speed task last hour"
  - new content "Next distance (nominal)"
  - new panel for "Team code" provides quick access to team code settings (#2899)
* tasks
  - custom "start requires arm" setting (#2782)
  - new option to disable OLC optimisation
  - MAT: remove "auto add" turnpoint feature when fly over it
  - update the calculator without a GPS fix (#2876)
  - fix task speed and time estimates before task start (#2876)
  - show "arm advance" button when manual arming is necessary
  - support the OLC/DMSt 500km triangle threshold (#2963)
* route planner
  - ignore inactive and acknowledged airspaces (#2866)
* waypoint editor
  - delete waypoint implemented
  - CUP file support added
* devices
  - enabling/disabling devices on-the-fly
  - "debug" button
  - more robust midnight wraparound handling (#2857)
  - new driver from Cambridge L-Nav
* Android
  - support IOIO via OpenAccessory (Android 4.x)
  - support USB host mode and USB-RS232 adapters on the Nook (#2886)
  - show Bluetooth name instead of MAC address in device list
* Analysis
  - a retrospective task is compiled that summarises waypoints the aircraft has 
    visited (within 15km radius).  These waypoints are drawn on OLC page of analysis dialog.

Version 6.6.4 - 2013/07/11
* map
  - fix stuttering terrain on Windows CE
  - fix multi-touch pan gesture (#2684)
* calculations
  - improve robustness of the zig-zag wind algorithm (#2961)
* devices
  - FLARM: work around a Garrecht TRX-1090 firmware bug (#2745, #2749)
  - LX: faster LXNAV Nano detection over Bluetooth (#2819)